<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sweden"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over"
    tools:context="com.example.android.howmuchdoyouknowaboutsweden.SecondQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">
        <TextView
            android:id = "@+id/name_greeting"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            android:layout_marginTop="100dp"
            android:text="@string/second_question"
            android:textSize="25sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp">
            <CheckBox
                android:id="@+id/check_box_skype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_qustion_choice_1"
                />

            <CheckBox
                android:id="@+id/check_box_bosch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_qustion_choice_2"
                />

            <CheckBox
                android:id="@+id/check_box_ericsson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_qustion_choice_3"
                />

            <CheckBox
                android:id="@+id/check_box_hm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_qustion_choice_4"
               />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/next_question_button"
        android:onClick="nextQuestion"
        android:id="@+id/button" />




</RelativeLayout>
