<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sweden"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over"
    tools:context="com.example.android.howmuchdoyouknowaboutsweden.FourthQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id = "@+id/name_greeting"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            android:layout_marginTop="100dp"
            android:text="@string/fourth_question"
            android:textSize="25sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/radioButton_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fourth_question_choice_1"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/radioButton_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fourth_question_choice_2"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/radioButton_23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fourth_question_choice_3"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/submit_answer_button"
        android:onClick="submitAnswer"/>
</RelativeLayout>
