<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sweden"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over"
    tools:context="com.example.android.howmuchdoyouknowaboutsweden.ThirdQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">
        <TextView
            android:id = "@+id/name_greeting"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            android:layout_marginTop="100dp"
            android:text="@string/third_question"
            android:textSize="25sp" />
        <EditText
            android:id = "@+id/third_question_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/third_question_hint"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/next_question_button"
        android:onClick="nextQuestion"
        android:id="@+id/button" />
</RelativeLayout>
